<resources>
    <string name="app_name">Parking App</string>

    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_account">Create Account</string>
    <string name="sign_in">Sign In</string>
    <string name="remember_me">Remember Me &amp; Use Biometrics?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="car_plate_number">Car Plate Number</string>
    <string name="phone_number">Phone Number</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="delete_profile">Delete Profile</string>
    <string name="building_code">Building Code</string>
    <string name="plate_number">Plate Number</string>
    <string name="date">Date</string>
    <string name="hours_selected">Hours Selected</string>
    <string name="parking_address">Parking Address</string>
    <string name="suit_number">Suit Number</string>
    <string name="view_on_map">View On Map</string>
    <string name="google_maps_key">AIzaSyC6z5hm51s1M8avJnE_rTJoVutFP-lsA9M</string>
    <string name="add_parking">Add Parking</string>
    <string name="building_code_5_characters">Building Code (5 Characters)</string>
    <string name="car_plate_number_2_8_characters">Car Plate Number (2-8 Characters)</string>
    <string name="suit_number_2_5_characters">Suit Number (2-5 Characters)</string>
    <string name="parking_location_address">Parking Location (Address)</string>
    <string name="use_location_services">Use Current Location?</string>
    <string name="parking_date">Parking Date (Skip for today\'s date)</string>
    <string name="how_many_hours_do_you_intend_to_park">How many hours do you intend to park?</string>

    <string name="preference_file_key">com.nathan630pm.nk_final_project.PREFERENCE_FILE_KEY</string>
    <string name="saved_email"></string>
    <string name="sign_in_with_biometrics">Sign in with Biometrics</string>
</resources>