<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="50dp"
    tools:context=".addParkingFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_weight="99"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="vertical"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="10dp"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/building_code_5_characters"
                    />

                <TextView
                    android:id="@+id/TVBuildingCodeError"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="error"
                    android:textColor="@color/red"
                    android:visibility="gone"
                    />

                <EditText
                    android:id="@+id/ETBuildingCode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/building_code"
                    />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="10dp"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/how_many_hours_do_you_intend_to_park"
                    />


                <Spinner
                    android:id="@+id/SHours"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="20dp"
                    />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="10dp"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/car_plate_number_2_8_characters"
                    />

                <TextView
                    android:id="@+id/TVPlateNoError"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="error"
                    android:textColor="@color/red"
                    android:visibility="gone"
                    />

                <EditText
                    android:id="@+id/ETPlateNo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/car_plate_number_2_8_characters"
                    />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="10dp"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/suit_number_2_5_characters"
                    />

                <TextView
                    android:id="@+id/TVSuitError"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="error"
                    android:textColor="@color/red"
                    android:visibility="gone"
                    />

                <EditText
                    android:id="@+id/ETSuit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/suit_number_2_5_characters"
                    />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="10dp"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/parking_location_address"
                    />

                <TextView
                    android:id="@+id/TVAddressError"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="error"
                    android:textColor="@color/red"
                    android:visibility="gone"
                    />

                <CheckBox
                    android:id="@+id/CBUseLocation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/use_location_services"
                    />

                <EditText
                    android:id="@+id/ETAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/parking_location_address"
                    />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="10dp"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/parking_date"
                    />

                <TextView
                    android:id="@+id/TVDateError"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="error"
                    android:textColor="@color/red"
                    android:visibility="gone"
                    />

                <DatePicker
                    android:layout_margin="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/DPDatePicker"
                    android:calendarTextColor="@color/white"
                    android:hapticFeedbackEnabled="true"
                    android:background="#afafaf"
                    android:textAlignment="center"
                    android:layout_gravity="center"
                    />


            </LinearLayout>






        </LinearLayout>





    </ScrollView>


    <Button
        android:id="@+id/BAddParking"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_margin="20dp"
        android:text="@string/add_parking"
        />

</LinearLayout>